--- a/style.css
+++ b/style.css
@@ -66,3 +66,119 @@ blockquote {
 	- https://www.smashingmagazine.com/2017/04/start-using-css-custom-properties/
 */
 
+
+.blog {
+	display: grid;
+	gap: 40px;
+	grid-template-columns: 1fr 4fr 2fr;
+}
+
+h1 {
+	color: var(--zelena);
+	font-size: 80px;
+	margin: 80px 0;
+}
+
+header {
+	grid-column: 2;
+}
+
+header p {
+	color: var(--seda);
+}
+
+p {
+	grid-column: 2;
+	margin: 0;
+}
+
+.tip {
+	background-color: var(--svetla);
+	font-size: 14px;
+	color: var(--tmava);
+	padding: 20px;
+}
+
+.tip a:link,
+.tip a:visited {
+	color: var(--oranzova);
+}
+
+.tip-vlevo {
+	grid-column: 1;
+	justify-self: end;
+	align-self: start;
+	text-align: right;
+	position: relative;
+	border-right: 2px solid var(--zluta);
+}
+
+.tip-vlevo img {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 10px;
+}
+
+.tip-vpravo {
+	grid-column: 3;
+	align-self: start;
+	border-left: 2px solid var(--zluta);
+}
+
+figure {
+	grid-column: 1 / -1;
+	margin:0;
+}
+
+figure img {
+	width: 100%;
+	height: 500px;
+	object-fit: cover;
+}
+
+figcaption {
+	color: var(--seda);
+	font-size: 14px;
+}
+
+blockquote {
+	grid-column: 1 / -1;
+	color: var(--seda);
+	text-align: center;
+	font-size: 30px;
+	margin: 0;
+}
+
+blockquote::before,
+blockquote::after {
+	content: "";
+	display: block;
+	width: 100px;
+	height: 2px;
+	background-color: var(--zelena);
+}
+
+blockquote::before {
+	margin: 0 auto 30px;
+}
+
+blockquote::after {
+	margin: 30px auto 0;
+}
+
+h2 {
+	color: var(--zelena);
+	grid-column: 2;
+}
+
+footer {
+	grid-column: 2;
+	color: var(--seda);
+	font-size: 14px;
+}
+
+footer a:link,
+footer a:visited {
+	color: var(--seda);
+}
+
